@@ -4,10 +4,15 @@
 \alias{getDatabaseSchema}
 \title{Get Database Schema}
 \usage{
-getDatabaseSchema(db)
+getDatabaseSchema(db, tableNames = NULL, tableTypes = c("TABLE", "VIEW"))
 }
 \arguments{
 \item{db}{full path to database (*.mdb, *.xls) or name of ODBC database}
+
+\item{tableNames}{optional. Vector of table names of tables to be included}
+
+\item{tableTypes}{types of database objects to be included. Default: 
+\code{c("TABLE", "VIEW")}}
 }
 \value{
 list with elements \emph{tables} and \emph{relationships}. Element
