@@ -1,3 +1,8 @@
+Latest changes
+==============
+
+* getDatabaseSchema(): add arguments "tableNames", "tableTypes"
+
 Changes in kwb.db 0.5.0 (2020-06-19)
 ====================================
 * Try using RODBC functions first before using functions from rodb32 package
